--- a/YumBlazor/Components/Pages/Category_Pages/CategoryList.razor
+++ b/YumBlazor/Components/Pages/Category_Pages/CategoryList.razor
@@ -1,4 +1,5 @@
 ﻿@page "/category"
+@inject ICategoryRepository _categoryRepository
 
 @if (IsProcessing)
 {
@@ -22,13 +23,38 @@ else
                     <button class="btn btn-lg btn-secondary" style="width:250px;">Add New Category</button>
                 </div>
             </div>
-            <p>Category's List</p>
+            @if (Categories.Any())
+            {
+                <table class="table table-bordered table-striped">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach(var obj in Categories)
+                        {
+                            <tr>
+                                <td>
+                                    @obj.Name
+                                </td>
+                                <td>
+                                    Buttons
+                                </td>
+
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            }
         </div>
     </div>
 }
 
 @code {
-    public bool IsProcessing { get; set; } = false;
+    private bool IsProcessing { get; set; } = false;
+    private IEnumerable<Category> Categories { get; set; } = new List<Category>();
 
     protected override async Task OnInitializedAsync()
     {
@@ -40,6 +66,7 @@ else
 
     private void LoadCategories()
     {
+        Categories= _categoryRepository.GetAll();
         //wat
     }
 }
