--- a/YumBlazor/Components/Pages/Category_Pages/CategoryList.razor
+++ b/YumBlazor/Components/Pages/Category_Pages/CategoryList.razor
@@ -42,7 +42,6 @@ else
                                 <td>
                                     Buttons
                                 </td>
-
                             </tr>
                         }
                     </tbody>
@@ -59,13 +58,14 @@ else
     protected override async Task OnInitializedAsync()
     {
         IsProcessing = true;
-        await Task.Delay(2000);
+        await Task.Yield();
         LoadCategories();
-        IsProcessing = false;
+        IsProcessing = false; 
     }
 
     private void LoadCategories()
     {
+        Thread.Sleep(5000);
         Categories= _categoryRepository.GetAll();
         //wat
     }
