--- a/YumBlazor/Components/Pages/Category_Pages/CategoryList.razor
+++ b/YumBlazor/Components/Pages/Category_Pages/CategoryList.razor
@@ -13,14 +13,15 @@ else
         <div class="card-header bg-black bg-gradient ml-0 py-3">
             <div class="row">
                 <div class="col-12 text-center">
-                    <h2 class="text-white py-2">Category List></h2>
+                    <h2 class="text-white py-2">Category List</h2>
                 </div>
             </div>
         </div>
         <div class="card-body p-4">
             <div class="row pb-3">
                 <div class="col-12 text-end">
-                    <button class="btn btn-lg btn-secondary" style="width:250px;">Add New Category</button>
+                    <a href="category/create" class="btn btn-lg btn-secondary" style="width:250px;">
+                        <i class="bi bi-plus-square"></i> Add New Category</a>
                 </div>
             </div>
             @if (Categories.Any())
@@ -40,7 +41,12 @@ else
                                     @obj.Name
                                 </td>
                                 <td>
-                                    Buttons
+                                    <a href="@($"category/update/{obj.Id}")" class="btn btn-primary">
+                                        <i class="bi bi-pencil-square"></i>Edit
+                                    </a>
+                                    <button class="btn btn-danger">
+                                        <i class="bi bi-trash3"></i>Delete
+                                    </button>
                                 </td>
                             </tr>
                         }
@@ -52,21 +58,28 @@ else
 }
 
 @code {
-    private bool IsProcessing { get; set; } = false;
+    private bool IsProcessing { get; set; } = true;
     private IEnumerable<Category> Categories { get; set; } = new List<Category>();
 
     protected override async Task OnInitializedAsync()
     {
-        IsProcessing = true;
-        await Task.Yield();
-        LoadCategories();
-        IsProcessing = false; 
+
     }
 
-    private void LoadCategories()
+    protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        Thread.Sleep(5000);
-        Categories= _categoryRepository.GetAll();
-        //wat
+        if(firstRender)
+        {
+            await LoadCategories();
+            IsProcessing = false;
+            StateHasChanged();
+        }
+        //return base.OnAfterRenderAsync(firstRender);
+    }
+
+    private async Task LoadCategories()
+    {
+        Categories= await _categoryRepository.GetAllAsync();
+        //load categories
     }
 }
