--- a/YumBlazor/Components/Pages/Category_Pages/CategoryList.razor
+++ b/YumBlazor/Components/Pages/Category_Pages/CategoryList.razor
@@ -1,5 +1,12 @@
 ﻿@page "/category"
 @inject ICategoryRepository _categoryRepository
+@inject IJSRuntime _JS
+
+<BsModal OnModalConfirmation="ConfirmDelete_Click" 
+    ButtonBootstrapStyle="btn-danger"
+    ButtonText="Delete"
+    Title="Are you sure you want to delete this Category?">
+</BsModal>
 
 @if (IsProcessing)
 {
@@ -44,7 +51,7 @@ else
                                     <a href="@($"category/update/{obj.Id}")" class="btn btn-primary">
                                         <i class="bi bi-pencil-square"></i>Edit
                                     </a>
-                                    <button class="btn btn-danger">
+                                    <button class="btn btn-danger" @onclick="()=>HandleDelete(obj.Id)">
                                         <i class="bi bi-trash3"></i>Delete
                                     </button>
                                 </td>
@@ -60,6 +67,7 @@ else
 @code {
     private bool IsProcessing { get; set; } = true;
     private IEnumerable<Category> Categories { get; set; } = new List<Category>();
+    private int DeleteCategoryId { get; set; } = 0;
 
     protected override async Task OnInitializedAsync()
     {
@@ -81,5 +89,32 @@ else
     {
         Categories= await _categoryRepository.GetAllAsync();
         //load categories
+    }
+
+    private void HandleDelete(int id)
+    {
+        DeleteCategoryId = id;
+        _JS.InvokeVoidAsync("ShowConfirmationModal");
+    }
+
+    private async Task ConfirmDelete_Click(bool isConfirmed)
+    {
+        IsProcessing = true;        
+        await _JS.InvokeVoidAsync("HideConfirmationModal");
+        if(isConfirmed && DeleteCategoryId != 0)
+        {
+            var result = await _categoryRepository.DeleteAsync(DeleteCategoryId);
+            if(result)
+            {                
+                _JS.ToastrSuccess("Category Deleted Successfully");
+            }
+            else
+            {
+                _JS.ToastrError("Error Encountered While Deleting");
+            }
+            await LoadCategories();
+        }
+        DeleteCategoryId = 0;
+        IsProcessing = false;
     }
 }
