--- a/YumBlazor/Components/Pages/Category_Pages/CategoryUpsert.razor
+++ b/YumBlazor/Components/Pages/Category_Pages/CategoryUpsert.razor
@@ -2,6 +2,7 @@
 @page "/category/update/{id:int}"
 @inject ICategoryRepository _categoryRepository
 @inject NavigationManager _navigationManager
+@inject IJSRuntime _JS
 
 @if (IsProcessing)
 {
@@ -83,6 +84,7 @@ else
         {
             //create
             await _categoryRepository.CreateAsync(Category);
+            await _JS.ToastrSuccess("Category Created Successfully");
         }
         else
         {
