--- a/YumBlazor/Components/_Imports.razor
+++ b/YumBlazor/Components/_Imports.razor
@@ -11,3 +11,5 @@
 @using YumBlazor.Components
 @using YumBlazor.Repository.IRepository
 @using YumBlazor.Data
+@using YumBlazor.Services.Extensions
+@using YumBlazor.Components.Shared
