--- a/YumBlazor/Components/Pages/Product_Pages/ProductUpsert.razor
+++ b/YumBlazor/Components/Pages/Product_Pages/ProductUpsert.razor
@@ -1,7 +1,7 @@
 ﻿@page "/product/create"
 @page "/product/update/{id:int}"
 @inject IProductRepository _productRepository
-@inject ICategoryRepository _categgorryRepository
+@inject ICategoryRepository _categoryRepository
 @inject NavigationManager _navigationManager
 @inject IJSRuntime _JS
 
@@ -17,7 +17,7 @@ else
         <div class="card-header bg-black bg-gradient ml-0 py-3">
             <div class="row">
                 <div class="col-12 text-center">
-                    <h2 class="text-white py-2">@(Id>0?"Create" : "Update")Product</h2>
+                    <h2 class="text-white py-2">@(Id==0?"Create" : "Update")Product</h2>
                 </div>
             </div>
         </div>
@@ -30,6 +30,29 @@ else
                         <label for="Name">Name</label>
                         <ValidationMessage For="@(() => Product.Name)" />
                     </div>
+                    <div class="form-floating py-3 col-12">
+                        <InputText @bind-Value="Product.Description" class="form-control" id="Description" placeholder="Description" />
+                        <label for="Description">Description</label>
+                        <ValidationMessage For="@(() => Product.Description)" />
+                    </div>
+                    <div class="form-floating py-3 col-12">
+                        <InputNumber @bind-Value="Product.Price" class="form-control" id="Price" placeholder="Price" />
+                        <label for="Price">Price</label>
+                        <ValidationMessage For="@(() => Product.Price)" />
+                    </div>
+                    <div class="form-floating py-3 col-12">
+                        <InputSelect @bind-Value="Product.CategoryId" class="form-select" id="category">
+                            <option value="0" disabled selected>--Select Category--</option>
+                            @foreach (var category in _categories)
+                            {
+                                <option value="@category.Id">@category.Name</option>
+                            }
+                        </InputSelect>
+                        <label for="category">Category</label>
+                        <ValidationMessage For="@(() => Product.CategoryId)" />
+                    </div>
+
+
                     <div class="row mt-3">
                         <div class="col-6 col-md-3">
                             <button type="submit" class="btn btn-primary form-control" disabled="@IsProcessing">
@@ -56,6 +79,8 @@ else
 
     [SupplyParameterFromForm]
     private Product Product { get; set; } = new Product();
+
+    private IEnumerable<Category> _categories = new List<Category>();
 
     private bool IsProcessing { get; set; } = true;
 
