--- a/YumBlazor/Components/Pages/Product_Pages/ProductList.razor
+++ b/YumBlazor/Components/Pages/Product_Pages/ProductList.razor
@@ -1,4 +1,5 @@
 ﻿@page "/product"
+@using System.Globalization
 @inject IProductRepository _productRepository
 @inject IJSRuntime _JS
 
@@ -37,6 +38,9 @@ else
                     <thead>
                         <tr>
                             <th>Name</th>
+                            <th>Price</th>
+                            <th>Special Tag</th>
+                            <th>Category</th>
                             <th></th>
                         </tr>
                     </thead>
@@ -47,6 +51,9 @@ else
                                 <td>
                                     @obj.Name
                                 </td>
+                                <td>@obj.Price.ToString("C", CultureInfo.GetCultureInfo("en-us"))</td>
+                                <td>@obj.SpecialTag</td>
+                                <td>@obj.Category.Name</td>
                                 <td>
                                     <a href="@($"product/update/{obj.Id}")" class="btn btn-primary">
                                         <i class="bi bi-pencil-square"></i>Edit
