--- a/YumBlazor/Components/Pages/Category_Pages/CategoryList.razor
+++ b/YumBlazor/Components/Pages/Category_Pages/CategoryList.razor
@@ -2,16 +2,16 @@
 @inject ICategoryRepository _categoryRepository
 @inject IJSRuntime _JS
 
-<BsModal OnModalConfirmation="ConfirmDelete_Click" 
-    ButtonBootstrapStyle="btn-danger"
-    ButtonText="Delete"
-    Title="Are you sure you want to delete this Category?">
+<BsModal OnModalConfirmation="ConfirmDelete_Click"
+        ButtonBootstrapStyle="btn-danger"
+        ButtonText="Delete"
+        Title="Are you sure you want to delete this Category?">
 </BsModal>
 
 @if (IsProcessing)
 {
     <div class="position-absolute w-75 h-75 d-flex flex-column align-items-center bg-white justify-content-center">
-        <img src="/images/loading.gif" />
+        <img src="/images/loading.gif" alt="loading" />
     </div>
 }
 else
@@ -28,7 +28,8 @@ else
             <div class="row pb-3">
                 <div class="col-12 text-end">
                     <a href="category/create" class="btn btn-lg btn-secondary" style="width:250px;">
-                        <i class="bi bi-plus-square"></i> Add New Category</a>
+                        <i class="bi bi-plus-square"></i> Add New Category
+                    </a>
                 </div>
             </div>
             @if (Categories.Any())
@@ -49,10 +50,10 @@ else
                                 </td>
                                 <td>
                                     <a href="@($"category/update/{obj.Id}")" class="btn btn-primary">
-                                        <i class="bi bi-pencil-square"></i>Edit
+                                        <i class="bi bi-pencil-square"></i> Edit
                                     </a>
                                     <button class="btn btn-danger" @onclick="()=>HandleDelete(obj.Id)">
-                                        <i class="bi bi-trash3"></i>Delete
+                                        <i class="bi bi-trash3"></i> Delete
                                     </button>
                                 </td>
                             </tr>
@@ -67,8 +68,7 @@ else
 @code {
     private bool IsProcessing { get; set; } = true;
     private IEnumerable<Category> Categories { get; set; } = new List<Category>();
-    private int DeleteCategoryId { get; set; } = 0;
-
+    private int DeleteCategoryID { get; set; } = 0;
     protected override async Task OnInitializedAsync()
     {
 
@@ -76,7 +76,7 @@ else
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        if(firstRender)
+        if (firstRender)
         {
             await LoadCategories();
             IsProcessing = false;
@@ -88,33 +88,31 @@ else
     private async Task LoadCategories()
     {
         Categories= await _categoryRepository.GetAllAsync();
-        //load categories
+        // Load categories
     }
 
     private void HandleDelete(int id)
     {
-        DeleteCategoryId = id;
+        DeleteCategoryID = id;
         _JS.InvokeVoidAsync("ShowConfirmationModal");
     }
 
     private async Task ConfirmDelete_Click(bool isConfirmed)
     {
-        IsProcessing = true;        
+        IsProcessing = true;
         await _JS.InvokeVoidAsync("HideConfirmationModal");
-        if(isConfirmed && DeleteCategoryId != 0)
+        if(isConfirmed && DeleteCategoryID != 0)
         {
-            var result = await _categoryRepository.DeleteAsync(DeleteCategoryId);
+            var result = await _categoryRepository.DeleteAsync(DeleteCategoryID);
             if(result)
-            {                
-                _JS.ToastrSuccess("Category Deleted Successfully");
-            }
+                _JS?.ToastrSuccess("Category Delete Successfully");
             else
-            {
-                _JS.ToastrError("Error Encountered While Deleting");
-            }
+                _JS?.ToastrError("Error Encountered while deleting");
+
             await LoadCategories();
         }
-        DeleteCategoryId = 0;
+        
+        DeleteCategoryID = 0;
         IsProcessing = false;
     }
 }
