--- a/YumBlazor/Components/Pages/Product_Pages/ProductList.razor
+++ b/YumBlazor/Components/Pages/Product_Pages/ProductList.razor
@@ -3,16 +3,16 @@
 @inject IProductRepository _productRepository
 @inject IJSRuntime _JS
 
-<BsModal OnModalConfirmation="ConfirmDelete_Click" 
-    ButtonBootstrapStyle="btn-danger"
-    ButtonText="Delete"
-    Title="Are you sure you want to delete this Product?">
+<BsModal OnModalConfirmation="ConfirmDelete_Click"
+        ButtonBootstrapStyle="btn-danger"
+        ButtonText="Delete"
+        Title="Are you sure you want to delete this Product?">
 </BsModal>
 
 @if (IsProcessing)
 {
     <div class="position-absolute w-75 h-75 d-flex flex-column align-items-center bg-white justify-content-center">
-        <img src="/images/loading.gif" />
+        <img src="/images/loading.gif" alt="loading" />
     </div>
 }
 else
@@ -29,7 +29,8 @@ else
             <div class="row pb-3">
                 <div class="col-12 text-end">
                     <a href="product/create" class="btn btn-lg btn-secondary" style="width:250px;">
-                        <i class="bi bi-plus-square"></i> Add New Product</a>
+                        <i class="bi bi-plus-square"></i> Add New Product
+                    </a>
                 </div>
             </div>
             @if (Products.Any())
@@ -51,13 +52,15 @@ else
                                 <td>
                                     @obj.Name
                                 </td>
-                                
+                                <td>@obj.Price.ToString("C", CultureInfo.GetCultureInfo("en-us"))</td>
+                                <td>@obj.SpecialTag</td>
+                                <td>@obj.Category.Name</td>
                                 <td>
                                     <a href="@($"product/update/{obj.Id}")" class="btn btn-primary">
-                                        <i class="bi bi-pencil-square"></i>Edit
+                                        <i class="bi bi-pencil-square"></i> Edit
                                     </a>
                                     <button class="btn btn-danger" @onclick="()=>HandleDelete(obj.Id)">
-                                        <i class="bi bi-trash3"></i>Delete
+                                        <i class="bi bi-trash3"></i> Delete
                                     </button>
                                 </td>
                             </tr>
@@ -72,11 +75,12 @@ else
 @code {
     private bool IsProcessing { get; set; } = true;
     private IEnumerable<Product> Products { get; set; } = new List<Product>();
-    private int DeleteProductId { get; set; } = 0;
+    private int DeleteProductID { get; set; } = 0;
+    
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        if(firstRender)
+        if (firstRender)
         {
             await LoadProducts();
             IsProcessing = false;
@@ -88,33 +92,31 @@ else
     private async Task LoadProducts()
     {
         Products= await _productRepository.GetAllAsync();
-        //load categories
+        // Load categories
     }
 
     private void HandleDelete(int id)
     {
-        DeleteProductId = id;
+        DeleteProductID = id;
         _JS.InvokeVoidAsync("ShowConfirmationModal");
     }
 
     private async Task ConfirmDelete_Click(bool isConfirmed)
     {
-        IsProcessing = true;        
+        IsProcessing = true;
         await _JS.InvokeVoidAsync("HideConfirmationModal");
-        if(isConfirmed && DeleteProductId != 0)
+        if(isConfirmed && DeleteProductID != 0)
         {
-            var result = await _productRepository.DeleteAsync(DeleteProductId);
+            var result = await _productRepository.DeleteAsync(DeleteProductID);
             if(result)
-            {                
-                _JS.ToastrSuccess("Product Deleted Successfully");
-            }
+                _JS?.ToastrSuccess("Product Delete Successfully");
             else
-            {
-                _JS.ToastrError("Error Encountered While Deleting");
-            }
+                _JS?.ToastrError("Error Encountered while deleting");
+
             await LoadProducts();
         }
-        DeleteProductId = 0;
+        
+        DeleteProductID = 0;
         IsProcessing = false;
     }
 }
