--- a/YumBlazor/Components/Pages/Product_Pages/ProductUpsert.razor
+++ b/YumBlazor/Components/Pages/Product_Pages/ProductUpsert.razor
@@ -4,11 +4,10 @@
 @inject ICategoryRepository _categoryRepository
 @inject NavigationManager _navigationManager
 @inject IJSRuntime _JS
-
 @if (IsProcessing)
 {
     <div class="position-absolute w-75 h-75 d-flex flex-column align-items-center bg-white justify-content-center">
-        <img src="/images/loading.gif" />
+        <img src="/images/loading.gif" alt="loading" />
     </div>
 }
 else
@@ -17,16 +16,17 @@ else
         <div class="card-header bg-black bg-gradient ml-0 py-3">
             <div class="row">
                 <div class="col-12 text-center">
-                    <h2 class="text-white py-2">@(Id==0?"Create" : "Update")Product</h2>
+                    <h2 class="text-white py-2">@(Id==0?"Create": "Update") Product</h2>
                 </div>
             </div>
         </div>
         <div class="card-body p-4">
             <EditForm Model="Product" FormName="ProductUpsertForm" OnValidSubmit="UpsertProduct">
                 <DataAnnotationsValidator/>
+                
                 <div class="border p-3 mt-4">
                     <div class="form-floating py-3 col-12">
-                        <InputText @bind-Value="Product.Name" class="form-control" id="Name" placeholder="Name"/>
+                        <InputText @bind-Value="Product.Name" class="form-control" id="Name" placeholder="Name" />
                         <label for="Name">Name</label>
                         <ValidationMessage For="@(() => Product.Name)" />
                     </div>
@@ -51,26 +51,31 @@ else
                         <label for="category">Category</label>
                         <ValidationMessage For="@(() => Product.CategoryId)" />
                     </div>
-
+                    <div class="form-floating py-3 col-12">
+                        <InputFile OnChange="LoadFiles" class="form-control" id="customFile" 
+                        accept="image/x-png,image/jpeg" ></InputFile>
+                        <label for="customFile">Upload Image</label>
+                    </div>
                     <div class="row mt-3">
                         <div class="col-6 col-md-3">
                             <button type="submit" class="btn btn-primary form-control" disabled="@IsProcessing">
-                                <i class="bi bi-floppy2-fill"></i>@(Id == 0 ? "Create" : "Update")
+                                <i class="bi bi-floppy2-fill"></i> @(Id == 0 ? "Create" : "Update") 
                             </button>
                         </div>
                         <div class="col-6 col-md-3">
                             <a href="product" class="btn btn-secondary form-control" disabled="@IsProcessing">
-                                <i class="bi bi-arrow-bar-left"></i>Back to List
+                                <i class="bi bi-arrow-bar-left"></i> Back to List
                             </a>
                         </div>
                     </div>
                 </div>
+                
             </EditForm>
-
             
         </div>
     </div>
 }
+
 
 @code {
     [Parameter]
@@ -81,20 +86,22 @@ else
 
     private IEnumerable<Category> _categories = new List<Category>();
 
+    private string? _directoryPath { get; set; }
+    private bool _isImageLoading { get; set; } = false;
     private bool IsProcessing { get; set; } = true;
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        if(firstRender)
+        if (firstRender)
         {
-            await LoadProductAndCateogryList();
+            await LoadProductAndCategoryList();
             IsProcessing = false;
             StateHasChanged();
         }
         //return base.OnAfterRenderAsync(firstRender);
     }
 
-    private async Task LoadProductAndCateogryList()
+    private async Task LoadProductAndCategoryList()
     {
         if (Id > 0)
         {
@@ -106,7 +113,7 @@ else
     private async Task UpsertProduct()
     {
         IsProcessing = true;
-        if(Product.Id == 0)
+        if (Product.Id == 0)
         {
             //create
             await _productRepository.CreateAsync(Product);
@@ -116,8 +123,14 @@ else
         {
             //update
             await _productRepository.UpdateAsync(Product);
+            await _JS.ToastrSuccess("Product Updated Successfully");
         }
         IsProcessing = false;
         _navigationManager.NavigateTo("product");
+    }
+
+    private async Task LoadFiles(InputFileChangeEventArgs e)
+    {
+        
     }
 }
