--- a/YumBlazor/Components/Pages/Product_Pages/ProductUpsert.razor
+++ b/YumBlazor/Components/Pages/Product_Pages/ProductUpsert.razor
@@ -3,6 +3,7 @@
 @inject IProductRepository _productRepository
 @inject ICategoryRepository _categoryRepository
 @inject NavigationManager _navigationManager
+@inject IWebHostEnvironment _webHostEnviroment
 @inject IJSRuntime _JS
 @if (IsProcessing)
 {
@@ -23,7 +24,7 @@ else
         <div class="card-body p-4">
             <EditForm Model="Product" FormName="ProductUpsertForm" OnValidSubmit="UpsertProduct">
                 <DataAnnotationsValidator/>
-                
+
                 <div class="border p-3 mt-4">
                     <div class="form-floating py-3 col-12">
                         <InputText @bind-Value="Product.Name" class="form-control" id="Name" placeholder="Name" />
@@ -34,6 +35,11 @@ else
                         <InputText @bind-Value="Product.Description" class="form-control" id="Description" placeholder="Description" />
                         <label for="Description">Description</label>
                         <ValidationMessage For="@(() => Product.Description)" />
+                    </div>
+                    <div class="form-floating py-3 col-12">
+                        <InputText @bind-Value="Product.SpecialTag" class="form-control" id="SpecialTag" placeholder="SpecialTag" />
+                        <label for="SpecialTag">Special Tag</label>
+                        <ValidationMessage For="@(() => Product.SpecialTag)" />
                     </div>
                     <div class="form-floating py-3 col-12">
                         <InputNumber @bind-Value="Product.Price" class="form-control" id="Price" placeholder="Price" />
@@ -52,9 +58,25 @@ else
                         <ValidationMessage For="@(() => Product.CategoryId)" />
                     </div>
                     <div class="form-floating py-3 col-12">
-                        <InputFile OnChange="LoadFiles" class="form-control" id="customFile" 
-                        accept="image/x-png,image/jpeg" ></InputFile>
-                        <label for="customFile">Upload Image</label>
+                        @if(Product.ImageUrl==null)
+                        {
+                            <InputFile OnChange="LoadFiles" class="form-control pt-3" id="customFile"
+                                       accept="image/x-png,image/jpeg"></InputFile>
+                            <label for="customFile">Upload Image</label>
+                        }
+                       
+                        @if(Product.ImageUrl != null)
+                        {
+                            <div class="row">
+                                <div class="col-3">
+                                    <img src="@Product.ImageUrl" alt="..." class="img-thumbnail" />
+                                </div>
+                                <div class="col-md-9">
+                                    <i class="bi bi-trash btn btn-outline-danger" @onclick="DeleteImage">Remove</i>
+                                </div>
+
+                            </div>
+                        }
                     </div>
                     <div class="row mt-3">
                         <div class="col-6 col-md-3">
@@ -69,26 +91,33 @@ else
                         </div>
                     </div>
                 </div>
-                
+
             </EditForm>
-            
+
         </div>
     </div>
 }
 
 
 @code {
-    [Parameter]
-    public int Id { get; set; }
+        [Parameter]
+        public int Id { get; set; }
 
-    [SupplyParameterFromForm]
-    private Product Product { get; set; } = new Product();
+        [SupplyParameterFromForm]
+        private Product Product { get; set; } = new Product();
 
     private IEnumerable<Category> _categories = new List<Category>();
 
     private string? _directoryPath { get; set; }
     private bool _isImageLoading { get; set; } = false;
     private bool IsProcessing { get; set; } = true;
+
+    protected override Task OnInitializedAsync()
+    {
+        _directoryPath = Path.Combine(_webHostEnviroment.WebRootPath, "images", "product");
+        return base.OnInitializedAsync();   
+    }
+
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
@@ -131,6 +160,37 @@ else
 
     private async Task LoadFiles(InputFileChangeEventArgs e)
     {
-        
+        IsProcessing = true;
+        var file = e.File;
+        FileInfo fileInfo = new(file.Name);
+        var newFileName = $"{Guid.NewGuid()}.{fileInfo.Extension}";
+        if(!Directory.Exists(_directoryPath))
+        {
+            Directory.CreateDirectory(_directoryPath);
+        }
+        var path = Path.Combine(_directoryPath, newFileName);
+
+        await using FileStream fileStream = new (path, FileMode.Create);
+        await file.OpenReadStream(file.Size).CopyToAsync(fileStream);
+        Product.ImageUrl = $"/images/product/{newFileName}";
+        IsProcessing = false;
+    }
+
+    void DeleteImage()
+    {
+        if(Product.ImageUrl== null)        
+            return;
+
+
+            var fileToDelete = Product.ImageUrl.Split('/').Reverse().First();
+
+        var filePathToDeleteImage = Path.Combine(_directoryPath, fileToDelete);
+
+        if (!File.Exists(filePathToDeleteImage))
+            return;
+
+            File.Delete(filePathToDeleteImage);
+            Product.ImageUrl = null;
+            return;
     }
 }
