--- a/YumBlazor/Components/Layout/NavBar.razor
+++ b/YumBlazor/Components/Layout/NavBar.razor
@@ -10,37 +10,48 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarCollapse">
 			<ul class="navbar-nav me-auto mb-2 mb-md-0">
-				<li class="nav-item">
+				<li class="nav-item mx-2">
 					<NavLink class="nav-link" href="">
 						<span class="bi bi-house-door" aria-hidden="true"></span> Home
 					</NavLink>
 				</li>
+				<li class="nav-item mx-2">
+					<NavLink class="nav-link" href="/cart">
+						<span class="bi bi-cart3" aria-hidden="true"></span> Cart
+					</NavLink>
+				</li>
 			</ul>
 			<ul class="d-flex navbar-nav mb-2 mb-md-0">
-				<li class="nav-item">
-					<button class="nav-link active me-2" style="cursor: pointer; background: transparent; border: 0px;">
-						Welcome, --Name--
-					</button>
-				</li>
-				<li class="nav-item">
-					<form action="Account/Logout" method="post">
-						<AntiforgeryToken />
-						<input type="hidden" name="ReturnUrl" value="" />
-						<button type="submit" class="nav-link btn btn-success">
-							<span class="bi bi-arrow-bar-left-nav-menu" aria-hidden="true"></span> Logout
-						</button>
-					</form>
-				</li>
-				<li class="nav-item">
-					<NavLink class="nav-link" href="Account/Register">
-						<span class="bi bi-person-nav-menu" aria-hidden="true"></span> Register
-					</NavLink>
-				</li>
-				<li class="nav-item">
-					<NavLink class="nav-link btn btn-success" href="Account/Login">
-						<span class="bi bi-person-badge-nav-menu" aria-hidden="true"></span> Login
-					</NavLink>
-				</li>
+				<AuthorizeView>
+					<Authorized>
+						<li class="nav-item">
+							<button class="nav-link active me-2" style="cursor: pointer; background: transparent; border: 0px;">
+								Welcome, @context?.User?.Identity?.Name
+							</button>
+						</li>
+						<li class="nav-item">
+							<form action="Account/Logout" method="post">
+								<AntiforgeryToken />
+								<input type="hidden" name="ReturnUrl" value="" />
+								<button type="submit" class="nav-link btn btn-success">
+									<span class="bi bi-arrow-bar-left-nav-menu" aria-hidden="true"></span> Logout
+								</button>
+							</form>
+						</li>
+					</Authorized>
+					<NotAuthorized>
+						<li class="nav-item">
+							<NavLink class="nav-link" href="Account/Register">
+								<span class="bi bi-person-nav-menu" aria-hidden="true"></span> Register
+							</NavLink>
+						</li>
+						<li class="nav-item">
+							<NavLink class="nav-link btn btn-success" href="Account/Login">
+								<span class="bi bi-person-badge-nav-menu" aria-hidden="true"></span> Login
+							</NavLink>
+						</li>
+					</NotAuthorized>
+				</AuthorizeView>
 			</ul>
 		</div>
 	</div>
