--- a/YumBlazor/Components/Pages/Home.razor
+++ b/YumBlazor/Components/Pages/Home.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@using System.Globalization
 @inject YumBlazor.Repository.IRepository.IProductRepository _productRepository
 
 <PageTitle>Home</PageTitle>
@@ -42,21 +43,32 @@ else
                         <div class="card">
                             <div class="mt-3 mb-2 row">
                                 <div class="col-6 px-3">
-                                    <i class="bi bi-star btn btn-outline-success disabled"> SpecialTag</i>
+                                    @if(!string.IsNullOrEmpty(prod.SpecialTag))
+                                    {
+                                        <i class="bi bi-star btn btn-outline-success disabled"> @prod.SpecialTag</i>
+                                    }
                                 </div>
-                                <div class="col-6 text-end px-3">
-                                    --PRICE--
+                                <div class="col-6 text-end text-danger px-3 h3">
+                                    @prod.Price.ToString("C",CultureInfo.GetCultureInfo("en-us"))
                                 </div>
                             </div>
                             <div class="text-center">
-                                <img class="card-img-top img-thumbnail img-rounded w-50 mt-2" src="images/default.png" style="">
+                                @if (!string.IsNullOrEmpty(prod.ImageUrl))
+                                {
+                                    <img class="card-img-top img-thumbnail img-rounded w-50 mt-2" src="@prod.ImageUrl" style="">
+                                }
+                                else
+                                {
+                                    <img class="card-img-top img-thumbnail img-rounded w-50 mt-2" src="images/default.png" style="">
+                                }
                             </div>
                             <div class="card-body">
-                                <h5 class="card-title text-center lead text-success">Name</h5>
+
+                                <h5 class="card-title text-center lead text-success">@prod.Name</h5>
+                                <p class="card-text mt-2">@((MarkupString)@prod.Description)</p>
                                 <h4 class="text-center">
-                                    <i class="bi bi-cart3 btn btn-success text-right  px-5" style="width:300px"> Add to cart</i>
-                                </h4>
-                                <p class="card-text mt-2">Description</p>
+                                    <i class="bi bi-cart3 btn btn-success text-right  px-5 form-control" style="width:300px"> Add to cart</i>
+                                </h4>                                
                             </div>
                         </div>
                     </div>
