--- a/YumBlazor/Components/Pages/Product_Pages/ProductUpsert.razor
+++ b/YumBlazor/Components/Pages/Product_Pages/ProductUpsert.razor
@@ -13,7 +13,7 @@
 }
 else
 {
-    <div class="card shadow border-0 mt-4">
+    <div class="card shadow border-0 m-4">
         <div class="card-header bg-black bg-gradient ml-0 py-3">
             <div class="row">
                 <div class="col-12 text-center">
@@ -61,10 +61,10 @@ else
                         @if(Product.ImageUrl==null)
                         {
                             <InputFile OnChange="LoadFiles" class="form-control pt-3" id="customFile"
-                                       accept="image/x-png,image/jpeg"></InputFile>
+                            accept="image/x-png,image/jpeg"></InputFile>
                             <label for="customFile">Upload Image</label>
                         }
-                       
+
                         @if(Product.ImageUrl != null)
                         {
                             <div class="row">
@@ -100,11 +100,11 @@ else
 
 
 @code {
-        [Parameter]
-        public int Id { get; set; }
+    [Parameter]
+    public int Id { get; set; }
 
-        [SupplyParameterFromForm]
-        private Product Product { get; set; } = new Product();
+    [SupplyParameterFromForm]
+    private Product Product { get; set; } = new Product();
 
     private IEnumerable<Category> _categories = new List<Category>();
 
@@ -182,15 +182,17 @@ else
             return;
 
 
-            var fileToDelete = Product.ImageUrl.Split('/').Reverse().First();
+        var fileToDelete = Product.ImageUrl.Split('/').Reverse().First();
 
         var filePathToDeleteImage = Path.Combine(_directoryPath, fileToDelete);
 
         if (!File.Exists(filePathToDeleteImage))
-            return;
-
-            File.Delete(filePathToDeleteImage);
+        {
             Product.ImageUrl = null;
             return;
+        }
+            File.Delete(filePathToDeleteImage);
+            Product.ImageUrl = null;
+            return;        
     }
 }
