--- a/YumBlazor/Components/Pages/Home.razor
+++ b/YumBlazor/Components/Pages/Home.razor
@@ -1,6 +1,7 @@
 ﻿@page "/"
 @using System.Globalization
 @inject YumBlazor.Repository.IRepository.IProductRepository _productRepository
+@inject ICategoryRepository _categoryRepository
 
 <PageTitle>Home</PageTitle>
 @if (IsProcessing)
@@ -28,16 +29,18 @@ else
                 <li class="nav-item">
                     <span class="nav-link" href="#" style="cursor: pointer">All</span>
                 </li>
-                <li class="nav-item">
-                    <span class="nav-link" href="#" style="cursor: pointer">Cat 1</span>
-                </li>
-                <li class="nav-item">
-                    <span class="nav-link" href="#" style="cursor: pointer">Cat 2</span>
-                </li>
+
+                @foreach(var category in Categories)
+                {
+                    <li class="nav-item">
+                        <span class="nav-link" href="#" style="cursor: pointer">@category.Name</span>
+                    </li>
+                }
+
             </ul>
             <div class="row mt-4 mx-1">
 
-                @foreach (var prod in Products)
+                @foreach (var prod in FilteredProducts)
                 {
                     <div class="col-12 col-md-6 col-lg-4 pe-3 mb-5">
                         <div class="card">
@@ -79,6 +82,11 @@ else
 }
 @code{
     private IEnumerable<Product> Products = new List<Product>();
+    private IEnumerable<Category> Categories = new List<Category>();
+    private IEnumerable<Product> FilteredProducts = new List<Product>();
+    private int _selectedCategoryId = 0;
+    private string _searchText = "";
+
     private bool IsProcessing { get; set; } = true;
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
@@ -94,6 +102,30 @@ else
     private async Task LoadProducts()
     {
         Products = await _productRepository.GetAllAsync();
+        Categories = await _categoryRepository.GetAllAsync();
+        FilterProducts(0);
+    }
+
+    private void FilterProducts(int categoryId)
+    {
+        if(categoryId==0)
+        {
+            FilteredProducts = Products;
+            _selectedCategoryId = categoryId;
+        }
+    }
+
+    private void FilterProductByName(string newValueOfSearchText)
+    {
+        if(string.IsNullOrWhiteSpace(newValueOfSearchText))
+        {
+            FilteredProducts = Products;
+        }
+        else
+        {
+            FilteredProducts = Products.Where(u => u.Name.Contains(newValueOfSearchText, StringComparison.InvariantCultureIgnoreCase)).ToList();
+        }
+        _searchText = newValueOfSearchText;
     }
 }
 
