--- a/YumBlazor/Components/Pages/Home.razor
+++ b/YumBlazor/Components/Pages/Home.razor
@@ -1,6 +1,5 @@
 ﻿@page "/"
 @using System.Globalization
-
 @inject AuthenticationStateProvider _AuthenticationStateProvider
 @inject IJSRuntime _JS
 @inject NavigationManager _NavigationManager
@@ -23,29 +22,29 @@ else
 
                 <div class="d-flex align-items-center" style="width: 100%;">
                     <input type="text" class="form-control rounded-pill"
-                    @bind:event="oninput" @bind:get="_searchText" @bind:set="FilterProductByName"
+                           @bind:event="oninput" @bind:get="_searchText" @bind:set="FilterProductByName"
                     placeholder="Search for Food Items!"
                     style="width: 100%; padding: 20px;">
                     <span style="position: relative; left: -43px;"><i class="bi bi-search"></i></span>
                 </div>
             </div>
         </div>
+
         <div class="content px-4 m-2">
             <ul class="nav nav-underline justify-content-center mb-2">
                 <li class="nav-item">
                     <span class="nav-link @GetActiveTabClass(0)" href="#" style="cursor: pointer" @onclick="()=>FilterProducts(0)">All</span>
                 </li>
-
-                @foreach(var category in Categories)
+                @foreach (var category in Categories)
                 {
                     <li class="nav-item">
-                        <span class="nav-link @GetActiveTabClass(category.Id)" href="#" style="cursor: pointer"
+                        <span class="nav-link @GetActiveTabClass(category.Id)" href="#" style="cursor: pointer" 
                         @onclick="()=>FilterProducts(category.Id)">
                             @category.Name
                         </span>
                     </li>
                 }
-
+                
             </ul>
             <div class="row mt-4 mx-1">
 
@@ -61,28 +60,30 @@ else
                                     }
                                 </div>
                                 <div class="col-6 text-end text-danger px-3 h3">
-                                    @prod.Price.ToString("C",CultureInfo.GetCultureInfo("en-us"))
+                                    @prod.Price.ToString("C", CultureInfo.GetCultureInfo("en-us"))
                                 </div>
                             </div>
                             <div class="text-center">
                                 @if (!string.IsNullOrEmpty(prod.ImageUrl))
                                 {
-                                    <img class="card-img-top img-thumbnail img-rounded w-50 mt-2" src="@prod.ImageUrl" style="">
+                                    <img class="card-img-top img-thumbnail img-rounded w-50 mt-2" src="@prod.ImageUrl" />
                                 }
                                 else
                                 {
-                                    <img class="card-img-top img-thumbnail img-rounded w-50 mt-2" src="images/default.png" style="">
+                                    <img class="card-img-top img-thumbnail img-rounded w-50 mt-2" src="images/default.png" style=""/>
                                 }
+
                             </div>
                             <div class="card-body">
-
                                 <h5 class="card-title text-center lead text-success">@prod.Name</h5>
                                 <p class="card-text mt-2">@((MarkupString)@prod.Description)</p>
                                 <h4 class="text-center">
-                                    <div class="m-lg-auto pt-2" @onclick="()=>AddOrderItem(prod)"> 
-                                        <i class="bi bi-cart3 btn btn-success text-right  px-5 form-control" style="width:300px"> Add to cart</i>
+                                    <div class="m-lg-auto p-2" @onclick="()=>AddOrderItem(prod)">
+                                    <i class="bi bi-cart3 btn btn-success text-right  px-5 form-control" > Add to cart</i>
                                     </div>
-                                </h4>                                
+                                </h4>
+                               
+
                             </div>
                         </div>
                     </div>
@@ -91,18 +92,19 @@ else
         </div>
     </div>
 }
+
 @code{
     private IEnumerable<Product> Products = new List<Product>();
     private IEnumerable<Category> Categories = new List<Category>();
     private IEnumerable<Product> FilteredProducts = new List<Product>();
+    private bool IsProcessing { get; set; } = true;
     private int _selectedCategoryId = 0;
     private string _searchText = "";
 
-    private bool IsProcessing { get; set; } = true;
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        if(firstRender)
+        if (firstRender)
         {
             await LoadProducts();
             IsProcessing = false;
@@ -117,67 +119,68 @@ else
         FilterProducts(0);
     }
 
+
     private void FilterProducts(int categoryId)
     {
         if (categoryId == 0)
         {
             FilteredProducts = Products;
             _selectedCategoryId = categoryId;
+            return;
         }
         else
         {
             FilteredProducts = Products.Where(u => u.CategoryId == categoryId).ToList();
             _selectedCategoryId = categoryId;
-            _searchText = string.Empty;
+            _searchText = String.Empty;
         }
     }
 
     private void FilterProductByName(string newValueOfSearchText)
     {
-        if(string.IsNullOrWhiteSpace(newValueOfSearchText))
+        if (string.IsNullOrWhiteSpace(newValueOfSearchText))
         {
             FilteredProducts = Products;
         }
         else
         {
-            FilteredProducts = Products.Where(u => u.Name.Contains(newValueOfSearchText, StringComparison.InvariantCultureIgnoreCase)).ToList();
+            FilteredProducts = Products
+            .Where(u => u.Name.Contains(newValueOfSearchText, StringComparison.InvariantCultureIgnoreCase)).ToList();
         }
         _searchText = newValueOfSearchText;
     }
 
     private string GetActiveTabClass(int categoryId)
     {
-        return categoryId == _selectedCategoryId ? "active" : string.Empty; 
+        return categoryId == _selectedCategoryId ? "active" : string.Empty;
     }
 
     private async Task AddOrderItem(Product product)
     {
-
         var authState = await _AuthenticationStateProvider.GetAuthenticationStateAsync();
         var user = authState.User;
         var authenticated = user.Identity is not null && user.Identity.IsAuthenticated;
 
+        //if user is not authenticated then redirect to login
         if (!authenticated)
         {
             _NavigationManager.NavigateTo("account/login");
         }
         else
         {
-            //add itmes to cart
-            var result = await _cartRepository.UpdateCartAsync(user.FindFirst(u => u.Type.Contains("nameidentifier"))?.Value, product.Id, 1);
+            //add item to cart
+            var result = await 
+            _cartRepository.UpdateCartAsync(user.FindFirst(u => u.Type.Contains("nameidentifier"))?.Value, product.Id, 1);
 
             if (result)
             {
                 _JS?.ToastrSuccess("Product added to cart successfully");
             }
-
             else
             {
                 _JS?.ToastrError("Error encountered");
             }
-
         }
     }
-}
 
-                  
+}   
