copied and pasted answer 163:

--- a/YumBlazor/Components/Pages/Home.razor
+++ b/YumBlazor/Components/Pages/Home.razor
@@ -29,7 +29,7 @@ else
                 </div>
             </div>
         </div>
-
+        <RadzenButton  Text="Hi"></RadzenButton>
         <div class="content px-4 m-2">
             <ul class="nav nav-underline justify-content-center mb-2">
                 <li class="nav-item">
