--- a/YumBlazor/Components/_Imports.razor
+++ b/YumBlazor/Components/_Imports.razor
@@ -13,4 +13,5 @@
 @using YumBlazor.Data
 @using YumBlazor.Services.Extensions
 @using YumBlazor.Components.Shared
-@using YumBlazor.Repository.IRepository
+@using Radzen
+@using Radzen.Blazor
